Update ParallelAlgorithms to include description