@@ -15,8 +15,7 @@ import java.util.stream.Stream;
 public class ParallelAlgorithms {
     public static long occurrences(String word, Path path) {
         try {
-            String contents = new String(Files.readAllBytes(path),
-                    StandardCharsets.UTF_8);
+            String contents = Files.readString(path);
             return Pattern.compile("\\PL+")
                     .splitAsStream(contents)
                     .filter(Predicate.isEqual(word))
@@ -27,9 +26,10 @@ public class ParallelAlgorithms {
     }
 
     public static void main(String[] args) throws IOException {
-        String contents = new String(Files.readAllBytes(Paths.get("alice.txt")),
-                StandardCharsets.UTF_8);
+        String contents = Files.readString(Paths.get("alice.txt"));
         List<String> words = List.of(contents.split("\\PL+"));
+
+        //
         long result = words.parallelStream().filter(s -> s.startsWith("A")).count();
         System.out.println("Words starting with A: " + result);
 
@@ -41,14 +41,18 @@ public class ParallelAlgorithms {
             System.out.println("Occurrences of String: " + total);
         }
 
+        // Arrays::parallelSetAll 메서드는 전달받은 함수에서 계산한 값으로 배열을 채운다.
         int[] values = new int[1000000];
         Arrays.parallelSetAll(values, i -> i % 10);
-        // values를 0 1 2 3 4 5 6 7 8 9 0 1 2 ... 값으로 채운다.
+        // values 를 0 1 2 3 4 5 6 7 8 9 0 1 2 ... 값으로 채운다.
         System.out.println(Arrays.toString(Arrays.copyOf(values, 20)));
+
+        // Arrays::parallelSort 메서드는 기본 타입값이나 객체의 배열을 정렬할 수 있다.
         String[] wordArray = words.toArray(new String[words.size()]);
         Arrays.parallelSort(wordArray, Comparator.comparing(String::length));
         System.out.println(Arrays.toString(Arrays.copyOfRange(wordArray, wordArray.length / 2, wordArray.length / 2 + 20)));
 
+        // Arrays::parallelSort 는 모든 타입별 버전에 범위의 경계를 전달할 수 있다.
         Arrays.parallelSort(values, values.length / 2, values.length);
         System.out.println(Arrays.toString(Arrays.copyOfRange(values, values.length / 2, values.length / 2 + 20)));
     }
